--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,19 @@
+// Grid for collection
 #collection-selectors {
 	display: grid;
 	grid-template-columns: repeat(5, auto); /* 5 per row */
 	gap: 6px 16px;
 }
 
+// Initial states of hide / unhide
 #skills-output {
-	display: none; /* hidden by default */
+	display: none;
+}
+#skills-summary {
+	display: block;
 }
 
-#skills-summary {
-	display: block; /* visible by default */
+// Reusabel hidden class
+.hidden {
+	display: none !important;
 }
