--- a/styles.css
+++ b/styles.css
@@ -55,3 +55,13 @@
 	border-radius: 4px;
 	box-shadow: inset 0 0 4px rgba(0,0,0,0.1);
 }
+
+.eq-table td.diff {
+	color: red;
+	font-weight: bold;
+}
+
+.enemy-table td.maxwin {
+	color: red;
+	font-weight: bold;
+}
